dropdown overlap fixed

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -71,4 +71,5 @@ p {
   background-attachment: fixed;
   background-size: cover;
   background-size: 100% 100%;
+  z-index:-100;
 }
