--- a/src/app/cancel/cancel.component.css
+++ b/src/app/cancel/cancel.component.css
@@ -108,4 +108,5 @@ h2 {
   background-attachment: fixed;
   background-size: cover;
   background-size: 100% 100%;
+  z-index:-100;
 }
